// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should display some warning messages for non INFO levels 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="system.set_log_level"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <form
    id="set-log-level-form"
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        system.set_log_level
      </h2>
    </div>
    <div
      className="modal-body"
    >
      <p
        className="spacer-bottom"
      >
        <input
          checked={false}
          className="spacer-right text-middle"
          id="loglevel-INFO"
          name="system.log_levels"
          onChange={[Function]}
          type="radio"
          value="INFO"
        />
        <label
          htmlFor="loglevel-INFO"
        >
          INFO
        </label>
      </p>
      <p
        className="spacer-bottom"
      >
        <input
          checked={true}
          className="spacer-right text-middle"
          id="loglevel-DEBUG"
          name="system.log_levels"
          onChange={[Function]}
          type="radio"
          value="DEBUG"
        />
        <label
          htmlFor="loglevel-DEBUG"
        >
          DEBUG
        </label>
      </p>
      <p
        className="spacer-bottom"
      >
        <input
          checked={false}
          className="spacer-right text-middle"
          id="loglevel-TRACE"
          name="system.log_levels"
          onChange={[Function]}
          type="radio"
          value="TRACE"
        />
        <label
          htmlFor="loglevel-TRACE"
        >
          TRACE
        </label>
      </p>
      <div
        className="alert alert-info spacer-top"
      >
        Foo
      </div>
      <div
        className="alert alert-danger spacer-top"
      >
        system.log_level.warning
      </div>
    </div>
    <div
      className="modal-foot"
    >
      <button
        disabled={false}
        id="set-log-level-submit"
      >
        save
      </button>
      <a
        href="#"
        id="set-log-level-cancel"
        onClick={[Function]}
      >
        cancel
      </a>
    </div>
  </form>
</Modal>
`;

exports[`should render correctly 1`] = `
<Modal
  ariaHideApp={true}
  bodyOpenClassName="ReactModal__Body--open"
  className="modal"
  closeTimeoutMS={0}
  contentLabel="system.set_log_level"
  isOpen={true}
  onRequestClose={[Function]}
  overlayClassName="modal-overlay"
  parentSelector={[Function]}
  portalClassName="ReactModalPortal"
  shouldCloseOnOverlayClick={true}
>
  <form
    id="set-log-level-form"
    onSubmit={[Function]}
  >
    <div
      className="modal-head"
    >
      <h2>
        system.set_log_level
      </h2>
    </div>
    <div
      className="modal-body"
    >
      <p
        className="spacer-bottom"
      >
        <input
          checked={true}
          className="spacer-right text-middle"
          id="loglevel-INFO"
          name="system.log_levels"
          onChange={[Function]}
          type="radio"
          value="INFO"
        />
        <label
          htmlFor="loglevel-INFO"
        >
          INFO
        </label>
      </p>
      <p
        className="spacer-bottom"
      >
        <input
          checked={false}
          className="spacer-right text-middle"
          id="loglevel-DEBUG"
          name="system.log_levels"
          onChange={[Function]}
          type="radio"
          value="DEBUG"
        />
        <label
          htmlFor="loglevel-DEBUG"
        >
          DEBUG
        </label>
      </p>
      <p
        className="spacer-bottom"
      >
        <input
          checked={false}
          className="spacer-right text-middle"
          id="loglevel-TRACE"
          name="system.log_levels"
          onChange={[Function]}
          type="radio"
          value="TRACE"
        />
        <label
          htmlFor="loglevel-TRACE"
        >
          TRACE
        </label>
      </p>
      <div
        className="alert alert-info spacer-top"
      >
        Foo
      </div>
    </div>
    <div
      className="modal-foot"
    >
      <button
        disabled={false}
        id="set-log-level-submit"
      >
        save
      </button>
      <a
        href="#"
        id="set-log-level-cancel"
        onClick={[Function]}
      >
        cancel
      </a>
    </div>
  </form>
</Modal>
`;
